fix: fix border radius and spacing

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -636,6 +636,7 @@ footer ul {
 
 .tickets form {
     border: none;
+    margin-bottom: 0;
 }
 
 .tickets header {
@@ -1113,7 +1114,10 @@ h1 span {
     border-top: none;
     border-bottom: none;
     border-radius: 0;
+    border-bottom-left-radius: 5px;
+    border-bottom-right-radius: 5px;
     margin-top:0;
+    margin-bottom: 0;
 }
 
 .createEventForm input,
